# django-vue-docker

./: .env  .env.example  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  docker-entrypoint.sh  entrypoint.sh  pyproject.toml  requirements.txt
backend-v/: Dockerfile  requirements.txt
backend/.envs/: .backend
backend/backend/: settings.py  urls.py
backend/dj_app/dj_app/: settings.py  urls.py
backend/users/: managers.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: TheFooter.vue  TheHeader.vue  TheHeaderSettingsMenu.vue  TheLogin.vue  TheSidebar.vue
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/views/: Home.vue  TheHome.vue
nginx/: default.conf
nginx/conf.d/: default.conf
